<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:layout_marginBottom="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <com.titin.memotin.BotonesVistas
        android:id="@+id/button_grid"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp" />

    <TableLayout
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:stretchColumns="1,3"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp">

        <TableRow android:layout_gravity="center">
            <View
                android:layout_height="2dip" />
            <TextView
                android:layout_gravity="left"
                android:text="@string/game"
                android:textSize="16sp"
                android:layout_marginEnd="4dp" />
            <TextView
                android:id="@+id/game"
                android:layout_gravity="left"
                android:text="1"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:layout_gravity="left"
                android:text="@string/level"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp" />
            <TextView
                android:id="@+id/level"
                android:layout_gravity="left"
                android:text="1"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TableRow android:layout_gravity="center"
            android:layout_marginTop="8dp">
            <Button
                android:id="@+id/last"
                android:background="@drawable/yellow_control"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
            <View
                android:layout_height="2dip" />
            <Button
                android:id="@+id/start"
                android:background="@drawable/red_control"
                android:layout_width="60dp"
                android:layout_height="60dp" />
            <View
                android:layout_height="2dip" />
            <Button
                android:id="@+id/longest"
                android:background="@drawable/yellow_control"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
        </TableRow>

        <TableRow android:layout_gravity="center"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_gravity="center"
                android:text="@string/last"
                android:textAlignment="center" />
            <View
                android:layout_height="2dip" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/start"
                android:textAlignment="center" />
            <View
                android:layout_height="2dip" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/longest"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>
</LinearLayout>